# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
data/: teams.txt
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py  login.py  register.py  views.py
src/entities/: game_stats.py  user.py  workout.py
src/repositories/: game_stats_repository.py  goal_repository.py  user_repository.py  workout_repository.py
src/services/: game_stats_service.py  goal_service.py  login_service.py  register_service.py  workout_service.py
src/tests/: conftest.py  register_test.py
src/tests/services/: game_stats_service_test.py  goal_service_test.py  register_service_test.py  workout_service_test.py
src/ui/: game_stats_view.py  goal_view.py  login_view.py  main_view.py  register_view.py  ui.py  workout_view.py
