[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["F4U57O <fabio.sciortino@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"
invoke = "^2.2.0"
tkcalendar = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
coverage = "^6.5.0"
pylint = "2.15.5"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
