[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["F4U57O <fabio.sciortino@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
